<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="400dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.grabid.views.BoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/dialog_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/title_size" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:weightSum="3">

        <com.grabid.views.BoldTextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:text="@string/hint_cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.BoldTextView
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:text="@string/hint_clear"
            android:textColor="@android:color/white"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.BoldTextView
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/border_white"
            android:gravity="center"
            android:text="@string/hint_save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/input_size" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"></RelativeLayout>


</LinearLayout>