<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.grabid.views.RegularTextView
        android:id="@+id/_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/input_size"
        android:visibility="gone" />

    <com.grabid.views.RegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin"
        android:text="Vehicle Registration No"
        android:textColor="@color/form_title"
        android:textSize="@dimen/btn_size" />

    <com.grabid.views.BoldEditText
        android:id="@+id/vehicle_regd_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_txtbox"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
        android:ems="15"
        android:hint="Enter Vehicle Registration no"
        android:imeActionId="12"
        android:imeActionLabel="Done"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textColor="@color/form_feild"
        android:textColorHint="@color/form_title"
        android:textSize="@dimen/btn_size" />


    <com.grabid.views.RegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_margin"
        android:text="Vehicle Type"
        android:textColor="@color/form_title"
        android:textSize="@dimen/btn_size" />

    <com.grabid.views.BoldTextView
        android:id="@+id/vehicle_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_dropdown"
        android:ellipsize="end"
        android:gravity="center|left"
        android:hint="Select Vehicle Type"
        android:maxLines="1"
        android:textColor="@color/form_feild"
        android:textColorHint="@color/form_title"
        android:textSize="@dimen/btn_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.grabid.views.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:text="@string/vehicleowner"
            android:textColor="@color/form_title"
            android:textSize="@dimen/btn_size" />

        <RadioGroup
            android:id="@+id/m_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.grabid.views.BoldRadioButton
                android:id="@+id/m_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:text="@string/yescap"
                android:textColor="@color/form_feild"
                android:textSize="@dimen/radiobtn_size" />

            <com.grabid.views.BoldRadioButton
                android:id="@+id/m_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:buttonTint="@color/green"
                android:text="@string/nocap"
                android:textColor="@color/form_feild"
                android:textSize="@dimen/radiobtn_size" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.grabid.views.RegularTextView
                android:id="@+id/regpapers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin"
                android:text="@string/vehregpap"
                android:textColor="@color/form_title"
                android:textSize="@dimen/btn_size" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvhl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scrollbars="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.grabid.views.RegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin"
                android:text="@string/vehreginspap"
                android:textColor="@color/form_title"
                android:textSize="@dimen/btn_size" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvhlincr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:scrollbars="horizontal" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.grabid.views.RegularTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_margin"
            android:text="@string/freightins"
            android:textColor="@color/form_title"
            android:textSize="@dimen/btn_size" />

        <RadioGroup
            android:id="@+id/freight_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.grabid.views.BoldRadioButton
                android:id="@+id/freight_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/green"
                android:text="@string/yescap"
                android:textColor="@color/form_feild"
                android:textSize="@dimen/radiobtn_size" />

            <com.grabid.views.BoldRadioButton
                android:id="@+id/freight_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:buttonTint="@color/green"
                android:text="@string/nocap"
                android:textColor="@color/form_feild"
                android:textSize="@dimen/radiobtn_size" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/freightdollarlinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.grabid.views.RegularTextView
                android:id="@+id/freightdollar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin"
                android:text="@string/freightdollar"
                android:textColor="@color/form_title"
                android:textSize="@dimen/btn_size" />


            <com.grabid.views.BoldEditText
                android:id="@+id/f_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_txtbox"
                android:ems="15"
                android:hint="Enter Freight Insurance cover(in $)"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:textColor="@color/form_feild"
                android:textColorHint="@color/form_title"
                android:textSize="@dimen/btn_size"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>