<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.grabid.util.RoundedImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_border" />

        <com.grabid.views.RegularTextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageView"
            android:text="Admin"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_shipper"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressDrawable="@drawable/rating_star"
                    android:stepSize="0.1" />

                <com.grabid.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/btn_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rating_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="12dp"
                    android:numStars="5"
                    android:progressDrawable="@drawable/rating_star" />

                <com.grabid.views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drive"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/btn_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_seprator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.grabid.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.RegularTextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.grabid.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.RegularTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.grabid.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suburb"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.RegularTextView
            android:id="@+id/suburb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.grabid.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.RegularTextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.grabid.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />

        <com.grabid.views.RegularTextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/input_size" />
    </LinearLayout>
</LinearLayout>